# sesac-manufacturing-2nd-project

./: .env_example  .gitattributes  .gitignore  CLAUDE.md  README.md  git_convention_v0.2.md  pyproject.toml  requirements.txt  skeleton_kickoff.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml
backend/: README.md  assembler.py  batch_runner.py  config.py  deps.py  graph.py  main.py  schemas.py  state.py  store.py
backend/api/: __init__.py  analyses.py  batches.py  lots.py  yield_summary.py
backend/graph_client/: __init__.py  kg_client.py  live_kg_client.py  morphology_rank.py  semantic_entry.py
backend/mcp_client/: client.py
backend/nodes/: cnn.py  critic.py  describer.py  graphrag.py  grouper.py  hypothesis.py  lowyield.py  observe.py  response.py  vlm.py  vlm_describe.py
backend/tests/: conftest.py  eval_hypocritic_scenario.py  test_api_smoke.py  test_critic.py  test_deps_semantic.py  test_describer.py  test_e2e_wafer_reading_path.py  test_group_failure_isolation.py  test_grouper_normal_lots.py  test_hypothesis_agent.py  test_kg_client.py  test_kg_query_layer_contract.py  test_live_kg_client.py  test_morphology_rank.py  test_observe.py  test_semantic_entry.py  test_skeleton_batch_runner.py  test_skeleton_flatten.py  test_skeleton_graph.py  test_skeleton_response.py  test_skeleton_routing.py  test_skeleton_state.py  test_smoke.py  test_vlm_describe.py
docs/: AGENT_GUIDE.md  API_CHANGELOG.md  API_명세서_v0.1.md  API_명세서_v1.0.md  BACKEND_DECISIONS.md  BACKEND_GAP.md  KG_schema_v1.2.md  KG_schema_v1.3.md  SECS_GEM MCP document.md  critic_설계공유_v1.0.md  git_convention_v0.2.md  hypo_critic_설계공유_v1.0.md  hypothesis_설계공유_v1.0.md  langgraph_골격_설계공유_v1.0.md  node_spec_01_cnn.md  node_spec_03_vlm_describe.md  node_spec_07_response.md  rca_wireframe_final7.html  rca_wireframe_v5.html  semiconductor_proposal.md  service_flow.md  skeleton_kickoff.md  skeleton_study.md
docs/node_langraph_spec/: # 노드 설계 공유 문서 템플릿 v1.md  langgraph_골격_설계공유_v1.0.md  node_spec_04_graphrag.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  labels.ts  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: EvidenceModal.tsx  HypothesisCard.tsx  WaferStrip.tsx  YieldChart.tsx
frontend/src/pages/: DashboardPage.tsx  ProgressPage.tsx  ResultPage.tsx
kg_rca/: .env_example  0_reset.py  1_test_connection.py  2_load_txt.py  3_split.py  4_ingest_chunks_to_neo4j.py  5_build_kg_from_chunks.py  6_ask_graphrag.py  7_build_signature_index.py  KG_output_명세.md  MCP_KG_정합성검토.md  README.md  SECS GEM MCP 문서_v0 1.md  STATUS.md  VLM_output - KG 연결.md  fab.md  mapping_table.yaml  requirements.txt  schema_v2.md  데이터 모델 설계_v1 0.md  데이터 모델 설계_v2.0.md  데이터 모델 설계_v3.0.md
kg_rca/backup/: 6_ask_graphrag_backup.py  schema.md
kg_rca/data/docs/: doc_A_wafermap_patterns.txt  doc_B_etch_troubleshooting.txt  (+6 more)
kg_rca/outputs/: chunks.jsonl  direct_cause_mapping_similarity.md  extracted_kg.jsonl  hypotheses.json  hypotheses_backup.json  parsed_docs.jsonl
kg_rca/tests/: README.md  conftest.py  test_hypotheses_contract.py  test_recall_regression.py  test_scenario_recall.py  test_step_fill.py
secsgem-mcp/: README.md  export_to_csv.py  fastmcp.json
secsgem-mcp/eval/: metrics.py
secsgem-mcp/preprocess/: wm811k_loader.py
secsgem-mcp/simulator/: fab_model.py  generate.py  render_mapping_md.py
secsgem-mcp/tests/: test_fab_model_consistency.py  test_mapping_table_consistency.py  test_no_ground_truth_leak.py  test_scenario_no_clue_collision.py  test_scenario_non_circular.py  test_scenario_shapes.py
wafer_reading/: __init__.py  constants.py  geometry_v0.1.py  quantitative.py  stacking.py
wafer_reading/classifier/: __init__.py  data.py  infer.py  train.py
wafer_reading/tests/: test_quantitative.py  test_vlm_adapter.py
wafer_reading/vlm/: __init__.py  adapter.py  demo.py  gen_assets.py  prompts.py
(+18 files in other folders)
