[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sesacline-semirca"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # backend (FastAPI + LangGraph 오케스트레이션)
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "langchain-mcp-adapters",
    # kg_rca (GraphRAG)
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-neo4j>=0.10.0",
    "langchain-text-splitters>=1.1.2",
    "neo4j>=6.2.0",
    "PyYAML>=6.0.3",
    # secsgem-mcp (MCP 9종 도구)
    "fastmcp>=2.0",
    "secsgem>=0.3.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",       # 웨이퍼맵 PNG 렌더링
    "scipy>=1.11",        # 스택맵 기하 통계 (연결요소 라벨링 — wafer_reading.quantitative)
    "ruptures>=1.1",      # change point detection (detect_change_points)
    # 공통
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
    "pytest",
    "torch>=2.7,<2.10",
    "torchvision>=0.22,<0.25",
    "transformers>=5.14.1",
    "accelerate>=1.14.0",
    "qwen-vl-utils>=0.0.14",
]

# flat-layout에 top-level 패키지가 여러 개 → 명시 필수 (auto-discovery 에러 방지)
[tool.setuptools]
packages = ["backend", "backend.graph_client", "backend.mcp_client", "backend.nodes",
            "server", "server.tools", "preprocess",
            "simulator", "simulator.scenarios", "agent", "eval"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
# torch/torchvision 전용(tool.uv.sources) — explicit 없으면 urllib3 등 일반 패키지까지
# 이 인덱스의 구버전으로 끌려감(실측: urllib3 2.7→1.26 다운그레이드)
explicit = true

# server/preprocess/simulator/agent/eval은 secsgem-mcp/ 하위에 있어 실제 위치를 매핑
# (backend는 저장소 루트에 바로 있어 매핑 불필요)
[tool.setuptools.package-dir]
server = "secsgem-mcp/server"
preprocess = "secsgem-mcp/preprocess"
simulator = "secsgem-mcp/simulator"
agent = "secsgem-mcp/agent"
eval = "secsgem-mcp/eval"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["secsgem-mcp/tests", "backend/tests", "kg_rca/tests"]
markers = ["data: 데이터셋 빌드(fab.db)가 필요한 테스트 — CI에서 제외"]

# 재현성 정책 (원래 secsgem-mcp/pyproject.toml)
[tool.secsgem-mcp]
global_seed = 20260101
timeline_days = 90

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
